docs: split the README into a router plus four reference documents
README schodzi z 49 683 B do ok. 4,7 KB. Treść przeniesiona bez zmian do
docs/how-it-works.md, docs/digest-email.md, docs/configuration.md i
docs/running-locally.md; poprawione dwanaście ścieżek względnych, które
przeniesienie do docs/ rozwiązywałoby względem złego katalogu.